[package]
name = "portimao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
mlua = { version = "0.9.8", features = ["lua54", "vendored"] }
color-eyre = "0.6.3"
